--- a/src/App.css
+++ b/src/App.css
@@ -1,6 +1,11 @@
 #root {
-  max-width: 1280px;
+  max-width: 100%;
   margin: 0 auto;
-  padding: 2rem;
   text-align: center;
+}
+
+html,
+body {
+  margin: 0;
+  padding: 0;
 }
