--- a/src/scss/_variables.scss
+++ b/src/scss/_variables.scss
@@ -3,14 +3,16 @@ $navbar-text-color: #824707;
 $navbar-hover-color: #493015;
 $navbar-transition: 0.3s ease;
 $navbar-height: 9vh;
-$navbar-small-height: 4vh;
+$navbar-shrink-height: 6vh;
+$navbar-small-height: 6vh;
+$navbar-small-shrink-height: 4vh;
 $hamburger-font-size: 2rem;
 $nav-link-font-size: 1.2rem;
 $nav-link-hover-shadow: 2px 2px 4px rgba(0, 0, 0, 0.3);
 
 $font-family: Arial, sans-serif;
-$hero-bg-color: #d2b48c;
-$hero-text-color: #824707;
+$hero-bg-color: #000000;
+$hero-text-color: #ffffff;
 $about-bg-color: #e6d3b1;
 $gelato-bg-color: #f4e8d1;
 $pastries-bg-color: #e6d3b1;
