--- a/src/scss/_variables.scss
+++ b/src/scss/_variables.scss
@@ -18,6 +18,7 @@ $gelato-bg-color: #f4e8d1;
 $pastries-bg-color: #e6d3b1;
 $contact-bg-color: #d2b48c;
 $contact-text-color: #824707;
+$confined-text-color: #bb7932;
 $section-padding: 50px 20px;
 $hero-padding: 100px 20px;
 $image-border-radius: 10px;
