--- a/src/scss/Navbar.scss
+++ b/src/scss/Navbar.scss
@@ -10,7 +10,7 @@
   top: 0;
   height: $navbar-height;
   transition: height $navbar-transition;
-  z-index: 1000; // Ensure it stays on top
+  z-index: 1000;
 }
 
 .navbar.shrink {
