Fix hero styling and add redirection button, add textarea to catering.

--- a/src/scss/_variables.scss
+++ b/src/scss/_variables.scss
@@ -11,8 +11,8 @@ $nav-link-font-size: 1.2rem;
 $nav-link-hover-shadow: 2px 2px 4px rgba(0, 0, 0, 0.3);
 
 $font-family: Arial, sans-serif;
-$hero-bg-color: #000000;
-$hero-text-color: #ffffff;
+$hero-bg-color: #cdae8f57;
+$hero-text-color: #824707;
 $about-bg-color: #e6d3b1;
 $gelato-bg-color: #f4e8d1;
 $pastries-bg-color: #e6d3b1;
@@ -22,3 +22,6 @@ $confined-text-color: #bb7932;
 $section-padding: 50px 20px;
 $hero-padding: 100px 20px;
 $image-border-radius: 10px;
+
+$button1-bg-color: #824707;
+$button1-hover-color: #8247079d;
