--- a/src/scss/Home.scss
+++ b/src/scss/Home.scss
@@ -23,7 +23,6 @@ img {
 
 .hero {
   background-color: $hero-bg-color;
-  color: $hero-text-color;
   padding: 0;
   width: 100%;
   box-sizing: border-box;
@@ -43,13 +42,17 @@ img {
 
 .hero .text {
   flex: 1;
+  font-size: 1.4rem;
+  color: $hero-text-color;
+  padding-left: 20px;
   padding-right: 20px;
   box-sizing: border-box;
   height: 100%;
   display: flex;
   flex-direction: column;
-  align-items: center;
+  align-items: flex-start;
   justify-content: center;
+  text-align: left;
 }
 
 .hero .image {
@@ -66,6 +69,23 @@ img {
   height: 100%;
   object-fit: cover;
   border-radius: 10px;
+}
+
+.hero .hero-button {
+  position: relative;
+  top: 15px;
+  background-color: $button1-bg-color;
+  color: white;
+  border: none;
+  padding: 15px 30px;
+  font-size: 1.25rem;
+  border-radius: 25px;
+  cursor: pointer;
+  transition: background-color 0.3s ease;
+
+  &:hover {
+    background-color: $button1-hover-color;
+  }
 }
 
 .carousel-root,
@@ -202,7 +222,7 @@ img {
   width: 100%;
   box-sizing: border-box;
   padding: 0;
-  max-height: 50vh;
+  max-height: 70vh;
   overflow: hidden;
 
   .catering,
@@ -230,13 +250,75 @@ img {
   }
 }
 
+.catering form {
+  display: flex;
+  flex-direction: column;
+  justify-content: center;
+  align-items: center;
+}
+
+.catering form div {
+  margin-bottom: 10px;
+  width: 75%;
+}
+
+.catering form label {
+  margin-bottom: 5px;
+  font-weight: bold;
+  color: #333;
+}
+
+.catering form textarea {
+  width: 90%;
+  padding: 10px;
+  border: 1px solid #ccc;
+  border-radius: 5px;
+  font-size: 1rem;
+  color: #333;
+  background-color: #fff;
+}
+
+.catering form button {
+  background-color: $button1-bg-color;
+  color: white;
+  border: none;
+  padding: 10px 20px;
+  font-size: 1rem;
+  border-radius: 5px;
+  cursor: pointer;
+  transition: background-color 0.3s ease;
+}
+
+.catering form button:hover {
+  background-color: $button1-hover-color;
+}
+
 @media (max-width: 425px) {
+  .hero {
+    height: 92.5vh;
+  }
+
   .hero-content {
     position: relative;
     width: 100%;
     height: 100%;
     overflow: hidden;
+    display: flex;
     flex-direction: column;
+    align-items: center;
+    justify-content: center;
+  }
+
+  .hero .text {
+    font-size: 1rem;
+    text-align: left;
+    width: 100%;
+    max-width: 90%;
+  }
+
+  .hero .hero-button {
+    font-size: 1rem;
+    padding: 10px 20px;
   }
 
   .hero .text,
@@ -251,7 +333,6 @@ img {
 
   .hero .text {
     order: 2;
-    padding-bottom: 5%;
   }
 
   .hero .image img {
