--- a/src/scss/_variables.scss
+++ b/src/scss/_variables.scss
@@ -12,13 +12,13 @@ $nav-link-hover-shadow: 2px 2px 4px rgba(0, 0, 0, 0.3);
 
 $font-family: Arial, sans-serif;
 $hero-bg-color: #cdae8f57;
-$hero-text-color: #824707;
+$hero-text-color: #6c3b07;
 $about-bg-color: #e6d3b1;
 $gelato-bg-color: #f4e8d1;
 $pastries-bg-color: #e6d3b1;
 $contact-bg-color: #d2b48c;
-$contact-text-color: #824707;
-$confined-text-color: #bb7932;
+$contact-text-color: #6c3b07;
+$confined-text-color: #6c3b07;
 $section-padding: 50px 20px;
 $hero-padding: 100px 20px;
 $image-border-radius: 10px;
