Change color scheme of navbar.

--- a/src/scss/_variables.scss
+++ b/src/scss/_variables.scss
@@ -1,6 +1,6 @@
-$navbar-bg-color: #d2b48c;
-$navbar-text-color: #824707;
-$navbar-hover-color: #493015;
+$navbar-bg-color: #a67c52;
+$navbar-text-color: #4e342e;
+$navbar-hover-color: #392723;
 $navbar-transition: 0.3s ease;
 $navbar-height: 9vh;
 $navbar-shrink-height: 6vh;
