--- a/src/scss/Home.scss
+++ b/src/scss/Home.scss
@@ -259,24 +259,38 @@ img {
   margin: 0;
 }
 
-.map-catering {
+.location-section {
   display: flex;
+  flex-direction: column;
   align-items: center;
   padding: $section-padding;
   width: 100%;
   box-sizing: border-box;
   padding: 0;
-  max-height: 70vh;
-  overflow: hidden;
 
-  .catering,
-  .map-container {
-    flex: 1 1 50%;
-    box-sizing: border-box;
+  .location-header {
+    text-align: center;
+    margin-top: 50px;
+    width: 100%;
+  }
+
+  .location-header h1 {
+    font-size: 3em;
+    margin-bottom: 20px;
+    width: 100%;
   }
 
   .map-container {
-    position: relative;
+    display: flex;
+    justify-content: center;
+    width: 100%;
+    margin-bottom: 50px;
+  }
+
+  .map {
+    height: 50vh;
+    width: 80%;
+    max-width: 1200px;
   }
 
   .map-overlay {
@@ -294,43 +308,64 @@ img {
   }
 }
 
-.catering form {
+.cake-section {
   display: flex;
-  flex-direction: column;
-  justify-content: center;
   align-items: center;
-}
+  padding: $section-padding;
+  width: 100%;
+  box-sizing: border-box;
+  padding: 0;
+  max-height: 70vh;
+  overflow: hidden;
 
-.catering form div {
-  margin-bottom: 10px;
-  width: 75%;
-}
+  .catering {
+    flex: 1 1 50%;
+    box-sizing: border-box;
+  }
 
-.catering form label {
-  margin-bottom: 5px;
-  font-weight: bold;
-  color: #333;
-}
+  form {
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+    width: 100%;
 
-.catering form textarea {
-  width: 90%;
-  padding: 10px;
-  border: 1px solid #ccc;
-  border-radius: 5px;
-  font-size: 1rem;
-  color: #333;
-  background-color: #fff;
-}
+    .form-group {
+      display: flex;
+      flex-direction: column;
+      align-items: center;
+      margin-bottom: 15px;
+      width: 100%;
+      max-width: 400px;
+    }
 
-.catering form button {
-  background-color: $button1-bg-color;
-  color: white;
-  border: none;
-  padding: 10px 20px;
-  font-size: 1rem;
-  border-radius: 5px;
-  cursor: pointer;
-  transition: background-color 0.3s ease;
+    label {
+      text-align: center;
+      margin-bottom: 5px;
+      font-weight: bold;
+    }
+
+    input,
+    textarea {
+      width: 90%;
+      padding: 10px;
+      border: 1px solid #ccc;
+      border-radius: 5px;
+      font-size: 1rem;
+      color: #333;
+      background-color: #fff;
+    }
+
+    button {
+      background-color: $button1-bg-color;
+      color: white;
+      border: none;
+      padding: 10px 20px;
+      font-size: 1rem;
+      border-radius: 5px;
+      cursor: pointer;
+      transition: background-color 0.3s ease;
+    }
+  }
 }
 
 .catering form button:hover {
