--- a/src/scss/Navbar.scss
+++ b/src/scss/Navbar.scss
@@ -73,6 +73,13 @@
   text-shadow: $nav-link-hover-shadow;
 }
 
+.centered-logo {
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  width: 100%;
+}
+
 @media (max-width: 425px) {
   .navbar-toggler {
     display: block;
