--- a/src/scss/Order.scss
+++ b/src/scss/Order.scss
@@ -51,7 +51,9 @@ select {
   background-color: #fff;
   color: $hero-text-color;
   box-shadow: 0px 2px 4px rgba(0, 0, 0, 0.1);
-  transition: border-color 0.3s ease, box-shadow 0.3s ease;
+  transition:
+    border-color 0.3s ease,
+    box-shadow 0.3s ease;
 
   &:focus {
     border-color: $button1-bg-color;
@@ -72,7 +74,9 @@ textarea {
   border-radius: 25px;
   font-size: 1.25rem;
   cursor: pointer;
-  transition: background-color 0.3s ease, transform 0.2s ease;
+  transition:
+    background-color 0.3s ease,
+    transform 0.2s ease;
 
   &:hover {
     background-color: $button1-hover-color;
@@ -89,20 +93,26 @@ textarea {
 .date-picker-input,
 .time-picker-input {
   width: 100%;
-  padding: 10px;
+  padding: 10px 0px;
   font-size: 1rem;
   border: 1px solid #ccc;
   border-radius: 5px;
   background-color: #fff;
   color: $hero-text-color;
   box-shadow: 0px 2px 4px rgba(0, 0, 0, 0.1);
-  transition: border-color 0.3s ease, box-shadow 0.3s ease;
+  transition:
+    border-color 0.3s ease,
+    box-shadow 0.3s ease;
 
   &:focus {
     border-color: $button1-bg-color;
     box-shadow: 0px 4px 6px rgba(0, 0, 0, 0.2);
     outline: none;
   }
+}
+
+.react-datepicker-wrapper {
+  width: 100%;
 }
 
 .react-datepicker__time-container {
