--- a/src/scss/_variables.scss
+++ b/src/scss/_variables.scss
@@ -1,6 +1,34 @@
-$navbar-bg-color: #a67c52;
-$navbar-text-color: #4e342e;
-$navbar-hover-color: #392723;
+// $navbar-bg-color: #a67c52;
+// $navbar-text-color: #4e342e;
+// $navbar-hover-color: #392723;
+// $navbar-transition: 0.3s ease;
+// $navbar-height: 9vh;
+// $navbar-shrink-height: 6vh;
+// $navbar-small-height: 6vh;
+// $navbar-small-shrink-height: 4vh;
+// $hamburger-font-size: 2rem;
+// $nav-link-font-size: 1.4rem;
+// $nav-link-hover-shadow: 2px 2px 4px rgba(0, 0, 0, 0.3);
+
+// $font-family: Arial, sans-serif;
+// $hero-bg-color: #cdae8f57;
+// $hero-text-color: #6c3b07;
+// $about-bg-color: #f4e8d1;
+// $gelato-bg-color: #f4e8d1;
+// $pastries-bg-color: #f4e8d1;
+// $contact-bg-color: #d2b48c;
+// $contact-text-color: #6c3b07;
+// $confined-text-color: #6c3b07;
+// $section-padding: 50px 20px;
+// $hero-padding: 100px 20px;
+// $image-border-radius: 10px;
+
+// $button1-bg-color: #824707;
+// $button1-hover-color: #8247079d;
+
+$navbar-bg-color: #5d4037;
+$navbar-text-color: #fff4e6;
+$navbar-hover-color: #a57363;
 $navbar-transition: 0.3s ease;
 $navbar-height: 9vh;
 $navbar-shrink-height: 6vh;
@@ -11,17 +39,22 @@ $nav-link-font-size: 1.4rem;
 $nav-link-hover-shadow: 2px 2px 4px rgba(0, 0, 0, 0.3);
 
 $font-family: Arial, sans-serif;
-$hero-bg-color: #cdae8f57;
-$hero-text-color: #6c3b07;
-$about-bg-color: #f4e8d1;
-$gelato-bg-color: #f4e8d1;
-$pastries-bg-color: #f4e8d1;
-$contact-bg-color: #d2b48c;
+$hero-bg-color: #fff4e6;
+$hero-h1-color: #3e2723;
+$hero-text-color: #4e4e4e;
+$about-bg-color: #e6d7ce;
+$gelato-bg-color: #fff4e6;
+$pastries-bg-color: #fff4e6;
+$contact-bg-color: #fff4e6;
 $contact-text-color: #6c3b07;
+$content-bg-color: #fff4e6;
 $confined-text-color: #6c3b07;
+$footer-bg-color: #5d4037;
+$footer-h-color: #fff4e6;
+$footer-text-color: #fff4e6;
 $section-padding: 50px 20px;
 $hero-padding: 100px 20px;
 $image-border-radius: 10px;
 
-$button1-bg-color: #824707;
-$button1-hover-color: #8247079d;
+$button1-bg-color: #e63946;
+$button1-hover-color: #c91e2d;
