--- a/src/scss/fonts.scss
+++ b/src/scss/fonts.scss
@@ -1,9 +1,9 @@
 @import url('https://fonts.googleapis.com/css2?family=Roboto:wght@400;700&display=swap');
 @import url('https://fonts.googleapis.com/css2?family=Open+Sans:wght@400;700&display=swap');
-@import url('https://fonts.googleapis.com/css2?family=Coiny&display=swap');
+@import url('https://fonts.googleapis.com/css2?family=Coiny&family=Playfair+Display:ital,wght@0,400..900;1,400..900&display=swap');
 
 body {
-  font-family: 'Roboto', sans-serif;
+  font-family: 'Playfair Display', sans-serif;
   margin: 0;
   padding: 0;
   box-sizing: border-box;
@@ -15,9 +15,14 @@ h3,
 h4,
 h5,
 h6 {
-  font-family: 'Coiny', 'Open Sans', sans-serif;
+  font-family: 'Playfair Display', 'Coiny', 'Open Sans', sans-serif;
+}
+
+p {
+  font-family: 'Playfair Display', 'Open Sans', sans-serif;
+  line-height: 1.6;
 }
 
 .navbar {
-  font-family: 'Coiny', 'Open Sans', sans-serif;
+  font-family: 'Playfair Display', 'Coiny', 'Open Sans', sans-serif;
 }
