--- a/src/scss/Home.scss
+++ b/src/scss/Home.scss
@@ -373,6 +373,9 @@ h3 {
   .hero {
     height: auto;
     min-height: 100vh;
+    box-sizing: border-box;
+    margin-top: -20px;
+    padding: 0;
   }
 
   .hero-content {
